# tdesign-template

./: .env.development  .env.production  .eslintignore  .gitignore  README.md  components.d.ts  index.html  package-lock.json  package.json
config/: vite.config.base.ts  vite.config.dev.ts  vite.config.prod.ts
config/plugin/: tdAutoResolver.ts  tdResolver.ts  visualizer.ts
docs/: base.md
mock/: index.ts
src/: App.vue  main.ts  permission.ts
src-tauri/: .taurignore  2  Cargo.toml  README.MD  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/html/: about.html
src-tauri/src/: commands.rs  lib.rs
src/components/thumbnail/: index.vue
src/config/: global.ts
src/directive/: index.ts
src/directive/permission/: index.ts
src/directive/safe-html/: index.ts
src/directive/spoiler/: index.ts
src/hooks/: permission.ts
src/interceptor/: externalLink.ts  index.ts
src/layouts/: admin.vue  blank.vue  index.vue  setting.vue  web.vue
src/layouts/components/: AdminHeader.vue  Breadcrumb.vue  Content.vue  Footer.vue  Header.vue  LayoutAdminHeader.vue  LayoutHeader.vue  LayoutWebContent.vue  LayoutWebHeader.vue  MenuContent.vue  Notice.vue  SideNav.vue  WebHeader.vue
src/locales/: index.ts
src/pages/login/: index.vue
src/router/: index.ts
src/router/guard/: index.ts  login.ts  metainfo.ts  permission.ts
src/store/: index.ts
src/store/modules/: notification.ts  permission.ts  (+2 more)
src/style/: layout.less  variables.less
src/tauri/: constant.ts  index.ts
src/types/: env.d.ts  interface.d.ts  router.d.ts
src/utils/: link.ts
(+49 files in other folders)
